<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="host_ok">OK</string>
    <string name="host_cancel">Cancel</string>
    <string name="app_name_host">Host (Device Connect Device Plug-in)</string>

    <string name="shutter">Shutter</string>
    <string name="zoomin">Zoomin</string>
    <string name="zoomout">Zoomout</string>

    <string name="stop_btn">Stop</string>

    <string name="touch_activity">Touch Activity</string>

    <string name="canvas_profile_view_close_guidance">tap to close.</string>
    <string name="keyevent_activity">Key Event Activity</string>

    <string name="overlay_preview">PREVIEW</string>
    <string name="overlay_preview_ticker">Start the camera</string>
    <string name="overlay_preview_channel_id">org.deviceconnect.android.intent.action.preview.host</string>
    <string name="overlay_preview_channel_title">Device Connect Preview</string>
    <string name="overlay_preview_channel_message">Preview with DeviceConnect.</string>
    <string name="overlay_preview_content_title">Being captured by the camera</string>
    <string name="overlay_preview_content_message">You can stop the capture by click.</string>

    <string name="host_settings_title">Host Settings</string>

    <string name="gps_settings_title">GPS setting [1/3]</string>
    <string name="gps_settings_body">Since this device plug-in uses the GPS function, please turn on the setting from the GPS setting screen of the terminal.</string>
    <string name="gps_settings_button">Open the setting screen</string>
    <string name="gps_settings_gps_detail">To use GPS from Android 6.0, you need permission for location information.\nTo use this device plug-in please allow the following permissions.\nTo cancel the permission, you can do it from the setting screen of the application.</string>
    <string name="gps_settings_gps_permission">Permission of\n location information</string>
    <string name="gps_settings_gps_permission_on">Acquired</string>
    <string name="gps_settings_gps_permission_off">Acquisition</string>

    <string name="recorder_settings_preview_jpeg_title">JPEG Quality - Preview [2/3]</string>

    <string name="host_setting_dialog_error_permission">It can not be searched because permission to use GPS is not permitted.\nPlease obtain permission of position information from GPS setting screen.</string>
    <string name="host_setting_dialog_disable_gps">Can not search because the GPS is disabled.\nPlease enable GPS by GPS setting screen.</string>



    <string name="host_canvas_download_title">Download</string>
    <string name="host_canvas_download_message">Downloading...</string>

    <string name="host_canvas_error_title">Failed to Get image</string>
    <string name="host_canvas_error_oom_message">Out of memory error.</string>
    <string name="host_canvas_error_not_found_message">Non exist image.</string>
    <string name="host_notification_channel_id">org.deviceconnect.android.intent.action.notifiy.host</string>
    <string name="host_notification_channel_title">Device Connect Notification</string>
    <string name="host_notification_channel_desc">DeviceConnect\'s Notification</string>
    <!-- Canvas Messages-->
    <string name="host_canvas_warning_dialog_title">Warning!!</string>
    <string name="host_canvas_multiple_warning_dialog_message">Canvas may be opened continuously.\nWhy do not you allow Canvas to appear any more?\nPlease check the box if you do not want to do so.</string>
    <string name="host_canvas_warning_dialog_check">Do not display the Canvas any more.</string>
    <string name="host_canvas_warning_dialog_uncheck">To enable Canvas again, cancel from the setting screen of Host plug-in.</string>
    <string name="host_canvas_external_resource_warning_dialog_message">Canvas is trying to access a resource that is in the form of an external network.It is OK?\nIf you do not want to display this confirmation dialog, please set it from the setting screen of Host plug-in.</string>
    <!-- Canvas Settings -->

    <string name="canvas_settings_title">Canvas Settings [3/3]</string>
    <string name="canvas_settings_multiple_show_title">Stop canvas start</string>
    <string name="canvas_settings_multiple_show_body">As Canvas stops running Canvas as a preventive measure when it is likely to be started continuously.</string>
    <string name="canvas_settings_multiple_show_permission">Canvas startusettings_host_canvas_multiple_show_for_muti_windowp stop</string>
    <string name="canvas_settings_multiple_show_permission_on">Start-up</string>
    <string name="canvas_settings_multiple_show_permission_off">Stop</string>

    <string name="canvas_settings_external_access_title">Access to external resources</string>
    <string name="canvas_settings_external_access_body">Sets whether or not Canvas will issue a confirmation dialog when accessing external resources.</string>
    <string name="canvas_settings_external_access_permission">Confirm access</string>
    <string name="canvas_settings_external_access_permission_on">To confirm</string>
    <string name="canvas_settings_external_access_permission_off">Do not confirm</string>
    <!-- Preferences -->
    <string name="settings_host_canvas_multiple_show" translatable="false">settings_host_canvas_multiple_show</string>
    <string name="settings_host_canvas_multiple_show_never" translatable="false">settings_host_canvas_multiple_show_never</string>
    <string name="settings_host_canvas_access_external_network" translatable="false">settings_host_canvas_access_external_network</string>
    <string name="settings_host_canvas_multiple_show_for_muti_window" translatable="false">settings_host_canvas_multiple_show_for_muti_window</string>
    <string name="settings_host_canvas_multiple_show_for_presentation" translatable="false">settings_host_canvas_multiple_show_for_presentation</string>
    <string name="settings_host_external_display" translatable="false">settings_host_external_display</string>
    <string name="settings_host_multi_display" translatable="false">settings_host_multi_display</string>

    <!-- MutiWindow -->
    <string name="accessibility_service_name">DeviceConnectMultiWindow</string>
    <string name="mutiwindow_accessibility_setting_description">Launch the DeviceConnect API in multi-window mode.</string>
    <string name="mutiwindow_accessibility_setting_message">To use multi window function with DeviceConnect, please enable DeviceConnectMutiWindow.</string>

</resources>

