<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_title"
            android:background="@color/title_background"
            android:gravity="center"
            android:text="@string/canvas_settings_title"
            android:textColor="@color/title_text"
            android:textSize="@dimen/text_size_title"/>

        <View style="@style/horizontalLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="14dp">


            <LinearLayout
                android:id="@+id/canvas_multiple_show_permission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/canvas_settings_multiple_show_title"
                    android:textSize="24sp"
                    android:textColor="#666666"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/canvas_settings_multiple_show_body"
                    android:textColor="#666666"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="2"
                        android:text="@string/canvas_settings_multiple_show_permission"
                        android:textColor="#000000"
                        android:textSize="18dp"/>

                    <Button
                        android:id="@+id/button_multiple_show_permission"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/button_blue"
                        android:text="@string/canvas_settings_multiple_show_permission_off"
                        android:textColor="#FFFFFF"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="14dp">


            <LinearLayout
                android:id="@+id/canvas_external_access_permission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/canvas_settings_external_access_title"
                    android:textSize="24sp"
                    android:textColor="#666666"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/canvas_settings_external_access_body"
                    android:textColor="#666666"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="2"
                        android:text="@string/canvas_settings_external_access_permission"
                        android:textColor="#000000"
                        android:textSize="18dp"/>

                    <Button
                        android:id="@+id/button_external_access_permission"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/button_blue"
                        android:text="@string/canvas_settings_external_access_permission_off"
                        android:textColor="#FFFFFF"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>